# videoclub-argento

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  database.py  etl.py  export_openapi.py  main.py  openapi.json  package.json  pyproject.toml  schemas.py  utils.py  worker.py
apps/backend/scripts/: 001_add_search_fields.sql  01_ingest.py  02_transform.py  03_load.py  migrate_002_source_attribution.sql  migrate_search_data.py
apps/frontend/: .env.example  .gitignore  AGENTS.md  PLAN.md  biome.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
apps/frontend/src/: app.css  app.html
apps/frontend/src/lib/: api-client.ts  poster.ts  types.ts
apps/frontend/src/lib/components/: AlertMessage.svelte  CategoryChips.svelte  FilterButtons.svelte  FilterPills.svelte  Footer.svelte  HeaderSearch.svelte  Logo.svelte  MovieCard.svelte  MovieGrid.svelte  NoInfoAvailable.svelte  PageHeader.svelte  ScrollToTop.svelte  SearchBar.svelte  SortControls.svelte  SyncButton.svelte  SynopsisTabs.svelte  ThemeToggle.svelte  Tooltip.svelte  VirtualList.svelte  WatchlistPage.svelte  WatchlistTabs.svelte
apps/frontend/src/lib/state/: categories.svelte.ts  index.ts  movies.svelte.ts  theme.svelte.ts  watchlist.svelte.ts
apps/frontend/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte  +page.ts
apps/frontend/src/routes/(views)/: +layout.svelte
apps/frontend/src/routes/listas/: +page.server.ts  (+1 more)
(+10 files in other folders)
